--- a/ResourcesStatic/css/style.css
+++ b/ResourcesStatic/css/style.css
@@ -9,6 +9,8 @@ body{
     --main-font-color1: #77a3d0;
     --main-font-shadow: #353535;
 
+    --interactive-color: #154c9c;
+
     --input-color0: #c5c5c5;
     --input-color1: #252525;
 }
