--- a/Modules/object_settings.css
+++ b/Modules/object_settings.css
@@ -72,11 +72,35 @@
     max-width: 100%;
 }
 
-.material_name{
-    float: none;
-    max-width: 90%;
-    width: 90%;
+.material_header{
+    max-width: calc(90% - 75px);
+    width: calc(90% - 75px);
     margin-left: 5%;
+}
+
+.material_name, .material_change_name{
+    width: 100%;
+    height: 23px;
+}
+
+.material_header, .material_options{
+    float: left;
+}
+
+.material_option{
+    background-color: var(--input-color1);
+    width: 23px;
+    height: 23px;
+    float: left;
+    text-align: center;
+    line-height: 23px;
+    margin-left: 2px;
+    transition: all 0.2s ease-in-out;
+}
+
+.material_option:hover{
+    color: var(--interactive-color);
+    cursor: pointer;
 }
 
 .material_viewer > canvas{
